2007-08-10  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimppropwidgets.[ch]: Merged gimp_prop_size_2d_* and
	gimp_prop_aspect_ratio_* to gimp_prop_number_pair_*.

	* app/tools/gimprectangleoptions.c (gimp_rectangle_options_gui):
	Use the merged gimp_prop_number_pair_entry_new.

2007-08-10  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.c
	(gimp_prop_file_chooser_button_new_with_dialog): added bug number.

2007-08-10  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_image): minor
	cleanup.

2007-08-10  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpnumberpairentry.c: formatting.

2007-08-10  Martin Nordholts  <martinn@svn.gnome.org>

	* libgimpwidgets/gimpnumberpairentry.[ch]: Some minor cleanup, and
	(gimp_number_pair_entry_set_user_override)
	(gimp_number_pair_entry_get_user_override): are now in the API.

	* libgimpwidgets/gimpwidgets.def: Updated.

2007-08-09  Martin Nordholts  <martinn@svn.gnome.org>

	* libgimpwidgets/gimpnumberpairentry.[ch]: Added properties for
	most of the instance members, and updated API.
	(gimp_number_pair_entry_get_aspect)
	(gimp_number_pair_entry_get_default_values)
	(gimp_number_pair_entry_get_ratio)
	(gimp_number_pair_entry_set_aspect)
	(gimp_number_pair_entry_set_ratio): Added API functions.

	* libgimpwidgets/gimpwidgets.def: Updated.

2007-08-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-settings.c: store the selected paper-size.

2007-08-09  Sven Neumann  <sven@gimp.org>

	* app/gui/splash.c: tweaked label positons.

2007-08-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-preview.[ch]: while dragging the preview
	image, draw only an outline.

2007-08-09  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: tweaked spacings on the Color
	Management page.

2007-08-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-page-layout.c: fixed the behavior when
	changing the unit.
